--- a/python/Dockerfile-linux.template
+++ b/python/Dockerfile-linux.template
@@ -110,6 +110,7 @@ RUN set -eux; \
 		make \
 		ncurses-dev \
 		openssl-dev \
+		patch \
 		pax-utils \
 		readline-dev \
 		sqlite-dev \
@@ -140,6 +141,7 @@ RUN set -eux; \
 		libsqlite3-dev \
 		libssl-dev \
 		make \
+		patch \
 		tk-dev \
 		uuid-dev \
 		wget \
@@ -165,6 +167,12 @@ RUN set -eux; \
 	rm python.tar.xz; \
 	\
 	cd /usr/src/python; \
+	case "$PYTHON_VERSION" in \
+		3.9.*|3.10.*|3.11.*) \
+			# Add platform triplets for 64-bit LoongArch (LA64), See: https://github.com/python/cpython/pull/30939
+			wget -O - https://github.com/loong64/docker-library/raw/refs/heads/main/python/Add-platform-triplets-for-64-bit-LoongArch.patch | patch -p1; \
+			;; \
+	esac; \
 	gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)"; \
 	./configure \
 		--build="$gnuArch" \
@@ -301,7 +309,8 @@ RUN set -eux; \
 		--no-cache-dir \
 		--no-compile \
 		{{ "setuptools==\( .setuptools.version )" | @sh }} \
-		wheel \
+		# https://github.com/docker-library/python/issues/1023
+		'wheel<0.46' \
 	; \
 {{ ) else "" end -}}
 	pip3 --version
