--- a/python/3.13/slim-trixie/Dockerfile
+++ b/python/3.13/slim-trixie/Dockerfile
@@ -43,6 +43,7 @@ RUN set -eux; \
 		libsqlite3-dev \
 		libssl-dev \
 		make \
+		patch \
 		tk-dev \
 		uuid-dev \
 		wget \
@@ -63,6 +64,12 @@ RUN set -eux; \
 	rm python.tar.xz; \
 	\
 	cd /usr/src/python; \
+	case "$PYTHON_VERSION" in \
+		3.9.*|3.10.*|3.11.*) \
+			# Add platform triplets for 64-bit LoongArch (LA64), See: https://github.com/python/cpython/pull/30939
+			wget -O - https://github.com/loong64/docker-library/raw/refs/heads/main/python/Add-platform-triplets-for-64-bit-LoongArch.patch | patch -p1; \
+			;; \
+	esac; \
 	gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)"; \
 	./configure \
 		--build="$gnuArch" \
