--- a/python/3.9/alpine3.21/Dockerfile
+++ b/python/3.9/alpine3.21/Dockerfile
@@ -46,6 +46,7 @@ RUN set -eux; \
 		make \
 		ncurses-dev \
 		openssl-dev \
+		patch \
 		pax-utils \
 		readline-dev \
 		sqlite-dev \
@@ -70,6 +71,12 @@ RUN set -eux; \
 	rm python.tar.xz; \
 	\
 	cd /usr/src/python; \
+	case "$PYTHON_VERSION" in \
+		3.9.*|3.10.*|3.11.*) \
+			# Add platform triplets for 64-bit LoongArch (LA64), See: https://github.com/python/cpython/pull/30939
+			wget -O - https://github.com/loong64/docker-library/raw/refs/heads/main/python/Add-platform-triplets-for-64-bit-LoongArch.patch | patch -p1; \
+			;; \
+	esac; \
 	gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)"; \
 	./configure \
 		--build="$gnuArch" \
@@ -123,7 +130,8 @@ RUN set -eux; \
 		--no-cache-dir \
 		--no-compile \
 		'setuptools==58.1.0' \
-		wheel \
+		# https://github.com/docker-library/python/issues/1023
+		'wheel<0.46' \
 	; \
 	pip3 --version
 
