add php alpine3.21 image
Signed-off-by: Jianfeng Liu <liujianfeng1994@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         id: set-matrix
         run: |
           declare -a changed_apps
-          apps=("golang" "node" "python" "redis" "postgres" "mariadb" "nginx")
+          apps=("golang" "node" "python" "redis" "postgres" "mariadb" "nginx" "php")
           commit_message="build(app): bump app to latest"
           
           for app in "${apps[@]}"; do
