--- a/.github/workflows/buildpack-deps.yml
+++ b/.github/workflows/buildpack-deps.yml
@@ -1,6 +1,13 @@
 name: build(buildpack-deps)
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
+  pull_request:
+    paths:
+      - 'buildpack-deps/**'
   workflow_dispatch:
   schedule:
     - cron: '0 0 2 * *'
@@ -25,6 +32,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub Container Registry
+        if: github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -36,7 +44,7 @@ jobs:
         with:
           context: ${{ matrix.name }}/${{ matrix.os }}/${{ matrix.suite }}/curl
           platforms: linux/loong64
-          push: true
+          push: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'schedule' }}
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ matrix.suite }}-curl
           outputs: type=image,oci-mediatypes=true,compression=zstd,compression-level=3,force-compression=true
@@ -48,7 +56,7 @@ jobs:
         with:
           context: ${{ matrix.name }}/${{ matrix.os }}/${{ matrix.suite }}/scm
           platforms: linux/loong64
-          push: true
+          push: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'schedule' }}
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ matrix.suite }}-scm
           outputs: type=image,oci-mediatypes=true,compression=zstd,compression-level=3,force-compression=true
@@ -60,7 +68,7 @@ jobs:
         with:
           context: ${{ matrix.name }}/${{ matrix.os }}/${{ matrix.suite }}
           platforms: linux/loong64
-          push: true
+          push: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'schedule' }}
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ matrix.suite }}
           outputs: type=image,oci-mediatypes=true,compression=zstd,compression-level=3,force-compression=true
