--- a/.github/workflows/mariadb.yml
+++ b/.github/workflows/mariadb.yml
@@ -1,6 +1,13 @@
 name: build(mariadb)
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
+  pull_request:
+    paths:
+      - 'mariadb/**'
   push:
     branches:
       - main
@@ -38,6 +45,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub Container Registry
+        if: github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -67,7 +75,7 @@ jobs:
         with:
           context: ${{ matrix.name }}/${{ matrix.version }}/
           platforms: linux/loong64
-          push: true
+          push: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'schedule' }}
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ env.image_tag }}
             ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ env.full_image_tag }}
@@ -84,6 +92,7 @@ jobs:
           sudo chown root:root /usr/local/bin/crane
 
       - name: Pull and Push Images
+        if: github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'
         run: |
           if [ "${{ matrix.version }}" = "${{ matrix.latest_version }}" ]; then
             crane cp ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ matrix.version }} ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:latest
