perf: 添加镜像测试流程
Signed-off-by: 吴小白 <296015668@qq.com>

--- a/.github/workflows/mariadb.yml
+++ b/.github/workflows/mariadb.yml
@@ -1,6 +1,17 @@
 name: build(mariadb)
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+    paths:
+      - 'mariadb/**'
   push:
     branches:
       - main
