--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -1,6 +1,17 @@
 name: build(golang)
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+    paths:
+      - 'golang/**'
   push:
     branches:
       - main
