--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         id: set-matrix
         run: |
           declare -a changed_apps
-          apps=("golang" "node" "python" "redis" "postgres" "mariadb" "nginx" "php")
+          apps=("golang" "node" "python" "redis" "postgres" "mariadb" "nextcloud" "nginx" "php")
           commit_message="build(app): bump app to latest"
           
           for app in "${apps[@]}"; do
