build(app): bump app to latest

--- a/python/3.14-rc/alpine3.21/Dockerfile
+++ b/python/3.14-rc/alpine3.21/Dockerfile
@@ -16,8 +16,8 @@ RUN set -eux; \
 		tzdata \
 	;
 
-ENV PYTHON_VERSION 3.14.0a7
-ENV PYTHON_SHA256 71adbcec3ac9edf93308e55cfb4184f2eb4b16fda2bb0a5a382929ed29c8386d
+ENV PYTHON_VERSION 3.14.0b1
+ENV PYTHON_SHA256 2ddd30a77c9f62e065ce648664a254b9b0c011bcdaa8c1c2787087e644cbeb39
 
 RUN set -eux; \
 	\
