--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -29,8 +29,8 @@ jobs:
       matrix:
         name: ['node']
         suite: ['trixie', 'trixie-slim', 'alpine3.21']
-        version: ['18', '20', '22', '23' ]
-        latest_version: ['23']
+        version: ['20', '22', '23', '24']
+        latest_version: ['24']
 
     steps:
       - name: Checkout ${{ matrix.name }}
@@ -97,6 +97,7 @@ jobs:
           sudo chown root:root /usr/local/bin/crane
 
       - name: Pull and Push Images
+        if: (github.event_name == 'push' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch') && github.ref == 'refs/heads/main'
         run: |
           if [ "${{ matrix.suite }}" = "trixie" ] && [ "${{ matrix.version }}" = "${{ matrix.latest_version }}" ]; then
             full_version=${{ env.full_version }}
