build(redis): use alpine 3.21
Signed-off-by: 吴小白 <296015668@qq.com>

--- a/redis/Dockerfile.template
+++ b/redis/Dockerfile.template
@@ -1,5 +1,5 @@
 {{ if env.variant == "alpine" then ( -}}
-FROM ghcr.io/loong64/alpine:{{ .alpine.version }}
+FROM ghcr.io/loong64/alpine:3.21
 {{ ) else ( -}}
 FROM ghcr.io/loong64/debian:trixie-slim
 {{ ) end -}}
